Созданы микросетки, исправлена кликабельность ссылок

--- a/catalog.html
+++ b/catalog.html
@@ -191,11 +191,13 @@
                   <p class="products-card-price">От 4000 ₽</p>
                 </div>
                 <div class="products-card-buttons">
-                  <a class="products-card-link-buttons" href="#">ПОДРОБНЕЕ</a>
-                  <button class="products-card-favorites">В ИЗБРАННОЕ</button>
-                  <img class="products-card-stars" src="#" alt="4 звезды">
-                  <span class="products-card-rating">РЕЙТИНГ: 8,5</span>
+                  <a class="products-card-link-buttons card-buttons-item" href="#">ПОДРОБНЕЕ</a>
+                  <button class="products-card-favorites card-buttons-item">В ИЗБРАННОЕ</button>
                 </div>
+                <div class="products-card-buttons">
+                  <img class="products-card-stars card-buttons-item" src="#" alt="4 звезды">
+                  <span class="products-card-rating card-buttons-item">РЕЙТИНГ: 8,5</span>
+                </divproducts-card-buttons>
               </li>
 
               <li class="catalog-products-card">
@@ -207,10 +209,10 @@
                   <p class="products-card-price">От 5000 ₽</p>
                 </div>
                 <div class="products-card-buttons">
-                  <a class="products-card-link-buttons" href="#">ПОДРОБНЕЕ</a>
-                  <button class="products-card-favorites">В ИЗБРАННОЕ</button>
-                  <img class="products-card-stars" src="#" alt="4 звезды">
-                  <span class="products-card-rating">РЕЙТИНГ: 9,2</span>
+                  <a class="products-card-link-buttons card-buttons-item" href="#">ПОДРОБНЕЕ</a>
+                  <button class="products-card-favorites card-buttons-item">В ИЗБРАННОЕ</button>
+                  <img class="products-card-stars card-buttons-item" src="#" alt="4 звезды">
+                  <span class="products-card-rating card-buttons-item">РЕЙТИНГ: 9,2</span>
                 </div>
               </li>
 
@@ -223,10 +225,10 @@
                   <p class="products-card-price">От 2500 ₽</p>
                 </div>
                 <div class="products-card-buttons">
-                  <a class="products-card-link-buttons" href="#">ПОДРОБНЕЕ</a>
-                  <button class="products-card-favorites">В ИЗБРАННОЕ</button>
-                  <img class="products-card-stars" src="#" alt="3 звезды">
-                  <span class="products-card-rating">РЕЙТИНГ: 6,9</span>
+                  <a class="products-card-link-buttons card-buttons-item" href="#">ПОДРОБНЕЕ</a>
+                  <button class="products-card-favorites card-buttons-item">В ИЗБРАННОЕ</button>
+                  <img class="products-card-stars card-buttons-item" src="#" alt="3 звезды">
+                  <span class="products-card-rating card-buttons-item">РЕЙТИНГ: 6,9</span>
                 </div>
               </li>
 
@@ -239,10 +241,10 @@
                   <p class="products-card-price">От 1500 ₽</p>
                 </div>
                 <div class="products-card-buttons">
-                  <a class="products-card-link-buttons" href="#">ПОДРОБНЕЕ</a>
-                  <button class="products-card-favorites">В ИЗБРАННОЕ</button>
-                  <img class="products-card-stars" src="#" alt="2 звезды">
-                  <span class="products-card-rating">РЕЙТИНГ: 5,0</span>
+                  <a class="products-card-link-buttons card-buttons-item" href="#">ПОДРОБНЕЕ</a>
+                  <button class="products-card-favorites card-buttons-item">В ИЗБРАННОЕ</button>
+                  <img class="products-card-stars card-buttons-item" src="#" alt="2 звезды">
+                  <span class="products-card-rating card-buttons-item">РЕЙТИНГ: 5,0</span>
                 </div>
               </li>
             </ul>
