--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
 
             <li class="navigation-user-item navigation-search">
               <a class="navigation-user-link" href="#">
-                <img class="navigation-user-img" src="images/Search.svg" width="19" height="19" alt="Поиск гостинницы">
-                <span class="visually-hidden">Поиск</span>
+                <img class="navigation-user-img" src="images/Search.svg" width="19" height="19" alt="Поиск гостинницы.">
+                <span class="visually-hidden">Поиск.</span>
               </a>
             </li>
 
             <li class="navigation-user-item navigation-favorites">
               <a class="navigation-user-link" href="#">
-                <img class="navigation-user-img" src="images/favorites.svg" width="18" height="17" alt="Избранное">
-                <span class="visually-hidden">Избранное</span>
+                <img class="navigation-user-img" src="images/favorites.svg" width="18" height="17" alt="Избранное.">
+                <span class="visually-hidden">Избранное.</span>
               </a>
             </li>
 
@@ -53,13 +53,13 @@
 
       <main class="main-index main-container">
         <div class="welcome-image-background">
-          <h1 class="visually-hidden">Город Седона</h1>
+          <h1 class="visually-hidden">Город Седона.</h1>
           <img class="main-wellcome-to-sedona-img" src="images/welcome-main.svg" width="458" height="352" alt="Wellocme-to-the-gargeous-SEDONA-becouse-the-grand-canyon-sucks">
         </div>
 
 
         <section class="main-advantages">
-          <h2 class="visually-hidden">Преимущества</h2>
+          <h2 class="visually-hidden">Преимущества.</h2>
           <span class="main-title">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</span>
           <p class="main-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
 
@@ -100,22 +100,22 @@
         </section>
 
         <section class="infrastructure">
-          <h2 class="visually-hidden">Инфраструктура</h2>
+          <h2 class="visually-hidden">Инфраструктура.</h2>
           <span class="main-title infrastructure-title">Приезжайте в Седону отдохнуть<br>в комфорте и уюте!</span>
           <p class="main-text infrastructure-text">Опытный персонал и качественное обслуживание!</p>
           <ul class="main-infrastructure-list">
-            <li class="main-infrastructure-item infrastructure-item-light">
-              <img class="main-infrastructure-img" src="images/advantages/advantage-housing.svg" width="76" height="72" alt="домик">
+            <li class="main-infrastructure-item infrastructure-item-color">
+              <img class="main-infrastructure-img" src="images/advantages/advantage-housing.svg" width="76" height="72" alt="домик.">
               <span class="main-infrastructure-title">ЖИЛЬЁ</span>
               <p class="main-infrastructure-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </li>
-            <li class="main-infrastructure-item">
-              <img class="main-infrastructure-img" src="images/advantages/advantage-food.svg" width="75" height="70" alt="еда">
+            <li class="main-infrastructure-item infrastructure-item-color">
+              <img class="main-infrastructure-img" src="images/advantages/advantage-food.svg" width="75" height="70" alt="Гамбургер.">
               <span class="main-infrastructure-title">ЕДА</span>
               <p class="main-infrastructure-text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
             </li>
-            <li class="main-infrastructure-item infrastructure-item-light">
-              <img class="main-infrastructure-img" src="images/advantages/advantage-surprise.svg" width="65" height="76" alt="сувениры">
+            <li class="main-infrastructure-item infrastructure-item-color">
+              <img class="main-infrastructure-img" src="images/advantages/advantage-surprise.svg" width="65" height="76" alt="Подарочная коробка.">
               <span class="main-infrastructure-title">СУВЕНИРЫ</span>
               <p class="main-infrastructure-text">Не только китайского, но и настоящего местного производства!</p>
             </li>
@@ -123,7 +123,7 @@
         </section>
 
         <section class="main-hotel-search">
-          <h2 class="visually-hidden">Найти гостинницу</h2>
+          <h2 class="visually-hidden">Найти гостинницу.</h2>
           <span class="main-title search-hotel-title">ЗАИНТЕРЕСОВАЛИСЬ?</span>
           <p class="main-text search-hotel-text">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <button class="button search-hotel">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
@@ -143,21 +143,21 @@
       <footer class="main-footer">
         <ul class="social-media-list">
           <li class="social-media-item">
-            <span class="visually-hidden">вконтакте</span>
+            <span class="visually-hidden">вконтакте.</span>
             <a class="social-media-link media-vk" href="#">
-              <img class="social-media-img" src="images/social-links/vk.svg" width="25" height="15" alt="лого vk">
+              <img class="social-media-img" src="images/social-links/vk.svg" width="25" height="15" alt="лого vk.">
             </a>
           </li>
           <li class="social-media-item">
-            <span class="visually-hidden">телеграм</span>
+            <span class="visually-hidden">телеграм.</span>
             <a class="social-media-link media-telegram" href="#">
-              <img class="social-media-img" src="images/social-links/telegram.svg" width="18" height="16" alt="лого telegram">
+              <img class="social-media-img" src="images/social-links/telegram.svg" width="18" height="16" alt="лого telegram.">
             </a>
           </li>
           <li class="social-media-item">
-            <span class="visually-hidden">youtube</span>
+            <span class="visually-hidden">youtube.</span>
             <a class="social-media-link media-youtube" href="#">
-              <img class="social-media-img" src="images/social-links/youtube.svg" width="23" height="18" alt="лого youtube">
+              <img class="social-media-img" src="images/social-links/youtube.svg" width="23" height="18" alt="лого youtube.">
             </a>
           </li>
         </ul>
