--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
 
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>HTML Academy: Каталог</title>
     <link rel="stylesheet" href="styles/style.css">
 
@@ -25,7 +26,7 @@
               <a class="header-navigation-link" href="#">О Седоне</a>
             </li>
             <li class="header-navigation-item">
-              <a class="header-navigation-link" href="#">Гостинницы</a>
+              <a class="header-navigation-link" href="#">Гостиницы</a>
             </li>
           </ul>
 
@@ -70,7 +71,7 @@
                   <img src="images/arrow.svg" alt="стрелка" width="8" height="11">
                 </li>
                 <li class="breadcrumbs-item">
-                  <a class="breadcrumbs-link" href="catalog.html" aria-current="page">Каталог</a>
+                  <a class="breadcrumbs-link" href="catalog.html" aria-current="page">Гостиницы</a>
                 </li>
               </ul>
             </header>
@@ -181,7 +182,7 @@
             <ul class="catalog-products-list">
 
               <li class="catalog-products-card">
-                <a class="products-card-link" href="#"><img class="products-card-img" src="images/hotels/hotel-1.jpg"
+                <a class="products-card-link-img" href="#"><img class="products-card-img" src="images/hotels/hotel-1.jpg"
                     width="300" height="212" alt="горы"></a>
                 <a class="products-card-link" href="#">
                   <h3 class="products-card-title">Amara Resort & Spa</h3>
@@ -201,7 +202,8 @@
               </li>
 
               <li class="catalog-products-card">
-                <a class="products-card-link" href="#"><img class="products-card-img" src="images/hotels/hotel-2.jpg"
+                <a class="products-card-link-img" href="#">
+                  <img class="products-card-img" src="images/hotels/hotel-2.jpg"
                     width="300" height="212" alt="горы"></a>
                 <h3 class="products-card-title"><a class="products-card-link" href="#">Villas at Poco Diablo</a></h3>
                 <div class="products-card-text">
@@ -217,7 +219,8 @@
               </li>
 
               <li class="catalog-products-card">
-                <a class="products-card-link" href="#"><img class="products-card-img" src="images/hotels/hotel-3.jpg"
+                <a class="products-card-link-img" href="#">
+                  <img class="products-card-img" src="images/hotels/hotel-3.jpg"
                     width="300" height="212" alt="горы"></a>
                 <h3 class="products-card-title"><a class="products-card-link" href="#">Desert Quail Inn</a></h3>
                 <div class="products-card-text">
@@ -233,7 +236,8 @@
               </li>
 
               <li class="catalog-products-card">
-                <a class="products-card-link" href="#"><img class="products-card-img" src="images/hotels/hotel-4.jpg"
+                <a class="products-card-link-img" href="#">
+                  <img class="products-card-img" src="images/hotels/hotel-4.jpg"
                     width="300" height="212" alt="горы"></a>
                 <h3 class="products-card-title"><a class="products-card-link" href="#">GreenTree Inn</a></h3>
                 <div class="products-card-text">
