--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div class="page-container">
       <header class="main-header">
         <a class="navigation-logo" href="index.html">
-          <img class="page-header-logo" src="images/logo.svg" width="140" height="70" alt="логотип Sedona" aria-current="page">
+          <img class="page-header-logo" src="images/logo.svg" width="140" height="70" alt="логотип Sedona"
+            aria-current="page">
         </a>
         <nav class="header-navigation">
 
@@ -23,7 +24,7 @@
               <a class="header-navigation-link" href="#">О Седоне</a>
             </li>
             <li class="header-navigation-item">
-              <a class="header-navigation-link" href="catalog.html">Гостинницы</a>
+              <a class="header-navigation-link" href="catalog.html">Гостиницы</a>
             </li>
           </ul>
 
@@ -54,22 +55,24 @@
       <main class="main-index main-container">
         <div class="welcome-image-background">
           <h1 class="visually-hidden">Город Седона.</h1>
-          <img class="main-wellcome-to-sedona-img" src="images/welcome-main.svg" width="458" height="352" alt="Wellocme-to-the-gargeous-SEDONA-becouse-the-grand-canyon-sucks">
+          <img class="main-wellcome-to-sedona-img" src="images/welcome-main.svg" width="458" height="352"
+            alt="Wellocme-to-the-gargeous-SEDONA-becouse-the-grand-canyon-sucks">
         </div>
 
 
         <section class="main-advantages">
           <h2 class="visually-hidden">Преимущества.</h2>
-          <span class="main-title">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</span>
-          <p class="main-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+          <span class="main-title title-uppercase">Седона — небольшой городок в Аризоне,<br>заслуживающий
+            большего!</span>
+          <p class="main-text main-text-transform">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
 
           <ul class="advantages-list">
             <li class="advantages-item advantages-item-big">
-                <div class="advantages-item-text-container">
-                  <span class="advantages-item-title pseudo-elements-light">Настоящий<br>городок</span>
-                  <p class="advantages-item-text"> Седона — не аттракцион для<br>туристов,там течёт своя<br>жизнь</p>
-                </div>
-              <img class= "advantages-item-img" src="images/town.jpg" width='800' height='385' alt="вид на отель">
+              <div class="advantages-item-text-container">
+                <span class="advantages-item-title pseudo-elements-light">Настоящий<br>городок</span>
+                <p class="advantages-item-text"> Седона — не аттракцион для<br>туристов, там течёт своя<br>жизнь</p>
+              </div>
+              <img class="advantages-item-img" src="images/town.jpg" width='800' height='385' alt="вид на отель">
             </li>
             <li class="advantages-item">
               <div class="advantages-item-text-container">
@@ -90,7 +93,8 @@
               </div>
             </li>
             <li class="advantages-item advantages-item-big">
-              <img class="advantages-item-img" src="images/devil's-bridge.jpg" width='800' height='385' alt="вид на каньон">
+              <img class="advantages-item-img" src="images/devil's-bridge.jpg" width='800' height='385'
+                alt="вид на каньон">
               <div class="advantages-item-text-container pseudo-elements-relative-dark">
                 <span class="advantages-item-title pseudo-elements-light">Там есть<br>мост дьявола</span>
                 <p class="advantages-item-text">Да, по нему можно пройти!<br>Если вы осмелитесь,<br>разумеется</p>
@@ -105,19 +109,23 @@
           <p class="main-text infrastructure-text">Опытный персонал и качественное обслуживание!</p>
           <ul class="main-infrastructure-list">
             <li class="main-infrastructure-item infrastructure-item-color">
-              <img class="main-infrastructure-img" src="images/advantages/advantage-housing.svg" width="76" height="72" alt="домик.">
+              <img class="main-infrastructure-img" src="images/advantages/advantage-housing.svg" width="76" height="72"
+                alt="домик.">
               <span class="main-infrastructure-title">ЖИЛЬЁ</span>
-              <p class="main-infrastructure-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+              <p class="main-infrastructure-text">Рекомендуем пожить<br> в настоящем мотеле, <br> всё как в кино!</p>
             </li>
             <li class="main-infrastructure-item infrastructure-item-color">
-              <img class="main-infrastructure-img" src="images/advantages/advantage-food.svg" width="75" height="70" alt="Гамбургер.">
+              <img class="main-infrastructure-img" src="images/advantages/advantage-food.svg" width="75" height="70"
+                alt="Гамбургер.">
               <span class="main-infrastructure-title">ЕДА</span>
-              <p class="main-infrastructure-text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+              <p class="main-infrastructure-text">Всегда заказывайте<br>топовый фирменный бургер,<br> вы не
+                разочаруетесь!</p>
             </li>
             <li class="main-infrastructure-item infrastructure-item-color">
-              <img class="main-infrastructure-img" src="images/advantages/advantage-surprise.svg" width="65" height="76" alt="Подарочная коробка.">
+              <img class="main-infrastructure-img infrastructure-img-surprise"
+                src="images/advantages/advantage-surprise.svg" width="65" height="76" alt="Подарочная коробка.">
               <span class="main-infrastructure-title">СУВЕНИРЫ</span>
-              <p class="main-infrastructure-text">Не только китайского, но и настоящего местного производства!</p>
+              <p class="main-infrastructure-text">Не только китайского,<br> но и настоящего местного производства!</p>
             </li>
           </ul>
         </section>
@@ -125,7 +133,8 @@
         <section class="main-hotel-search">
           <h2 class="visually-hidden">Найти гостинницу.</h2>
           <span class="main-title search-hotel-title">ЗАИНТЕРЕСОВАЛИСЬ?</span>
-          <p class="main-text search-hotel-text">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <p class="main-text search-hotel-text">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие
+            предложения гостиниц в Седоне</p>
           <button class="button search-hotel">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
         </section>
 
@@ -151,19 +160,22 @@
           <li class="social-media-item">
             <span class="visually-hidden">телеграм.</span>
             <a class="social-media-link media-telegram" href="#">
-              <img class="social-media-img" src="images/social-links/telegram.svg" width="18" height="16" alt="лого telegram.">
+              <img class="social-media-img" src="images/social-links/telegram.svg" width="18" height="16"
+                alt="лого telegram.">
             </a>
           </li>
           <li class="social-media-item">
             <span class="visually-hidden">youtube.</span>
             <a class="social-media-link media-youtube" href="#">
-              <img class="social-media-img" src="images/social-links/youtube.svg" width="23" height="18" alt="лого youtube.">
+              <img class="social-media-img" src="images/social-links/youtube.svg" width="23" height="18"
+                alt="лого youtube.">
             </a>
           </li>
         </ul>
         <a class="footer-contact-tel" href="tel:+78128121212">+7 (812) 812-12-12</a>
         <a class="footer-contact-link" href="#">
-          <img class="footer-contact-link-img" src="images/logo-HTML-Academy.svg" width="115" height="34" alt="лого HTMLAcademy">
+          <img class="footer-contact-link-img" src="images/logo-HTML-Academy.svg" width="115" height="34"
+            alt="лого HTMLAcademy">
         </a>
       </footer>
     </div>
