--- a/catalog.html
+++ b/catalog.html
@@ -187,69 +187,54 @@
                 <a class="products-card-link" href="#">
                   <h3 class="products-card-title">Amara Resort & Spa</h3>
                 </a>
-                <div class="products-card-text">
-                  <p class="products-card-type-hostel">Гостиница</p>
-                  <p class="products-card-price">От 4000 ₽</p>
-                </div>
-                <div class="products-card-buttons">
-                  <a class="products-card-link-buttons card-buttons-item" href="#">ПОДРОБНЕЕ</a>
-                  <button class="products-card-favorites card-buttons-item">В ИЗБРАННОЕ</button>
-                </div>
-                <div class="products-card-buttons">
-                  <img class="products-card-stars card-buttons-item" src="#" alt="4 звезды">
-                  <span class="products-card-rating card-buttons-item">РЕЙТИНГ: 8,5</span>
-                </divproducts-card-buttons>
+                <p class="products-card-type-hostel">Гостиница</p>
+                <p class="products-card-price">От 4000 ₽</p>
+                <a class="products-card-link-buttons card-buttons-item" href="#">ПОДРОБНЕЕ</a>
+                <button class="products-card-favorites card-buttons-item">В ИЗБРАННОЕ</button>
+                <img class="products-card-stars card-buttons-item" src="#" alt="4 звезды">
+                <span class="products-card-rating card-buttons-item">РЕЙТИНГ: 8,5</span>
               </li>
 
               <li class="catalog-products-card">
-                <a class="products-card-link-img" href="#">
-                  <img class="products-card-img" src="images/hotels/hotel-2.jpg"
+                <a class="products-card-link-img" href="#"><img class="products-card-img" src="images/hotels/hotel-2.jpg"
                     width="300" height="212" alt="горы"></a>
-                <h3 class="products-card-title"><a class="products-card-link" href="#">Villas at Poco Diablo</a></h3>
-                <div class="products-card-text">
-                  <p class="products-card-type-hostel">Гостиница</p>
-                  <p class="products-card-price">От 5000 ₽</p>
-                </div>
-                <div class="products-card-buttons">
-                  <a class="products-card-link-buttons card-buttons-item" href="#">ПОДРОБНЕЕ</a>
-                  <button class="products-card-favorites card-buttons-item">В ИЗБРАННОЕ</button>
-                  <img class="products-card-stars card-buttons-item" src="#" alt="4 звезды">
-                  <span class="products-card-rating card-buttons-item">РЕЙТИНГ: 9,2</span>
-                </div>
+                <a class="products-card-link" href="#">
+                  <h3 class="products-card-title">Villas at Poco Diablo</h3>
+                </a>
+                <p class="products-card-type-hostel">Гостиница</p>
+                <p class="products-card-price">От 5000 ₽</p>
+                <a class="products-card-link-buttons card-buttons-item" href="#">ПОДРОБНЕЕ</a>
+                <button class="products-card-favorites products-card-favorites-active card-buttons-item">В ИЗБРАННОM</button>
+                <img class="products-card-stars card-buttons-item" src="#" alt="4 звезды">
+                <span class="products-card-rating card-buttons-item">РЕЙТИНГ: 9,2</span>
               </li>
 
               <li class="catalog-products-card">
-                <a class="products-card-link-img" href="#">
-                  <img class="products-card-img" src="images/hotels/hotel-3.jpg"
+                <a class="products-card-link-img" href="#"><img class="products-card-img" src="images/hotels/hotel-3.jpg"
                     width="300" height="212" alt="горы"></a>
-                <h3 class="products-card-title"><a class="products-card-link" href="#">Desert Quail Inn</a></h3>
-                <div class="products-card-text">
-                  <p class="products-card-type-hostel">Гостиница</p>
-                  <p class="products-card-price">От 2500 ₽</p>
-                </div>
-                <div class="products-card-buttons">
-                  <a class="products-card-link-buttons card-buttons-item" href="#">ПОДРОБНЕЕ</a>
-                  <button class="products-card-favorites card-buttons-item">В ИЗБРАННОЕ</button>
-                  <img class="products-card-stars card-buttons-item" src="#" alt="3 звезды">
-                  <span class="products-card-rating card-buttons-item">РЕЙТИНГ: 6,9</span>
-                </div>
+                <a class="products-card-link" href="#">
+                  <h3 class="products-card-title">Desert Quail Inn</h3>
+                </a>
+                <p class="products-card-type-hostel">Гостиница</p>
+                <p class="products-card-price">От 2500 ₽</p>
+                <a class="products-card-link-buttons card-buttons-item" href="#">ПОДРОБНЕЕ</a>
+                <button class="products-card-favorites card-buttons-item">В ИЗБРАННОЕ</button>
+                <img class="products-card-stars card-buttons-item" src="#" alt="4 звезды">
+                <span class="products-card-rating card-buttons-item">РЕЙТИНГ: 6,9</span>
               </li>
 
               <li class="catalog-products-card">
-                <a class="products-card-link-img" href="#">
-                  <img class="products-card-img" src="images/hotels/hotel-4.jpg"
+                <a class="products-card-link-img" href="#"><img class="products-card-img" src="images/hotels/hotel-4.jpg"
                     width="300" height="212" alt="горы"></a>
-                <h3 class="products-card-title"><a class="products-card-link" href="#">GreenTree Inn</a></h3>
-                <div class="products-card-text">
-                  <p class="products-card-type-hostel">Гостиница</p>
-                  <p class="products-card-price">От 1500 ₽</p>
-                </div>
-                <div class="products-card-buttons">
-                  <a class="products-card-link-buttons card-buttons-item" href="#">ПОДРОБНЕЕ</a>
-                  <button class="products-card-favorites card-buttons-item">В ИЗБРАННОЕ</button>
-                  <img class="products-card-stars card-buttons-item" src="#" alt="2 звезды">
-                  <span class="products-card-rating card-buttons-item">РЕЙТИНГ: 5,0</span>
-                </div>
+                <a class="products-card-link" href="#">
+                  <h3 class="products-card-title">GreenTree Inn</h3>
+                </a>
+                <p class="products-card-type-hostel">Гостиница</p>
+                <p class="products-card-price">От 1500 ₽</p>
+                <a class="products-card-link-buttons card-buttons-item" href="#">ПОДРОБНЕЕ</a>
+                <button class="products-card-favorites card-buttons-item">В ИЗБРАННОЕ</button>
+                <img class="products-card-stars card-buttons-item" src="#" alt="4 звезды">
+                <span class="products-card-rating card-buttons-item">РЕЙТИНГ: 5,0</span>
               </li>
             </ul>
           </section>
