--- a/catalog.html
+++ b/catalog.html
@@ -26,26 +26,21 @@
               <a class="header-navigation-link" href="#">О Седоне</a>
             </li>
             <li class="header-navigation-item">
-              <a class="header-navigation-link" href="#">Гостиницы</a>
+              <a class="header-navigation-link navigation-link-active" href="#">Гостиницы</a>
             </li>
           </ul>
 
           <ul class="navigation-user-menu">
-
             <li class="navigation-user-item navigation-search">
-              <a class="navigation-user-link" href="#">
-                <img class="navigation-user-img" src="images/Search.svg" width="19" height="19" alt="Поиск гостинницы">
-                <span class="visually-hidden">Поиск</span>
+              <a class="navigation-user-link nav-link-icon-search" href="#">
+                <span class="visually-hidden">Поиск.</span>
               </a>
             </li>
-
             <li class="navigation-user-item navigation-favorites">
-              <a class="navigation-user-link" href="#">
-                <img class="navigation-user-img" src="images/favorites.svg" width="18" height="17" alt="Избранное">
-                <span class="visually-hidden">Избранное</span>
+              <a class="navigation-user-link nav-link-icon-favorites" href="#">
+                <span class="visually-hidden">Избранное.</span>
               </a>
             </li>
-
             <li class="navigation-user-item navigation-registration">
               <input class="button navigation-user-registration" type="button" value="Хочу сюда!">
             </li>
@@ -62,13 +57,12 @@
               <h1 class="inner-header-title catalog-title">Гостиницы Седоны</h1>
               <ul class="breadcrumbs">
                 <li class="breadcrumbs-item">
-                  <a class="breadcrumbs-link" href="index.html">
+                  <a class="breadcrumbs-link breadcrumbs-icon-house" href="index.html">
                     <span class="visually-hidden">Главная</span>
-                    <img class="breadcrumbs-img" src="images/house.svg" width="13" height="13" alt="главная">
                   </a>
                 </li>
                 <li class="breadcrumbs-item">
-                  <img src="images/arrow.svg" alt="стрелка" width="8" height="11">
+                  <span class="breadcrumbs-icon-arrow"></span>
                 </li>
                 <li class="breadcrumbs-item">
                   <a class="breadcrumbs-link" href="catalog.html" aria-current="page">Гостиницы</a>
@@ -165,14 +159,19 @@
             </select>
             <div class="catalog-card">
               <button class="catalog-card-variant">
-                <img src="images/positioning/positioning-3.svg" width="16" height="14" alt="Отображдение карточками">
+                <svg xmlns="http://www.w3.org/2000/svg"  focusable="false" aria-hidden="true"  width="16" height="14" fill="none" viewBox="0 0 16 14">
+                  <path fill="#000" d="M4 0H0v6h4V0ZM16 0h-4v6h4V0ZM10 0H6v6h4V0ZM4 8H0v6h4V8ZM16 8h-4v6h4V8ZM10 8H6v6h4V8Z"/>
+                </svg>
               </button>
               <button class="catalog-card-variant">
-                <img src="images/positioning/positioning-1.svg" width="16" height="14"
-                  alt="Отображение большими карточками">
+                <svg focusable="false" aria-hidden="true"  xmlns="http://www.w3.org/2000/svg" width="16" height="14" fill="none" viewBox="0 0 16 14">
+                  <path fill="#000" d="M16 12H0v2h16v-2ZM14 2v6H2V2h12Zm2-2H0v10h16V0Z"/>
+                </svg>
               </button>
               <button class="catalog-card-variant">
-                <img src="images/positioning/positioning-2.svg" width="16" height="14" alt="Отображение списком">
+                <svg focusable="false" aria-hidden="true"  xmlns="http://www.w3.org/2000/svg" width="16" height="14" fill="none" viewBox="0 0 16 14">
+                  <path fill="#000" d="M2 0H0v2h2V0ZM16 0H4v2h12V0ZM2 4H0v2h2V4ZM16 4H4v2h12V4ZM2 8H0v2h2V8ZM16 8H4v2h12V8ZM2 12H0v2h2v-2ZM16 12H4v2h12v-2Z"/>
+                </svg>
               </button>
             </div>
           </header>
@@ -245,7 +244,7 @@
 
             <ol class="catalog-pagination-list">
               <li class="catalog-pagination-item pagination-active">
-                <a class="catalog-pagination-link pagination-link-active" href="#">1</a>
+                <a class="pagination-link-active" href="#">1</a>
               </li>
               <li class="catalog-pagination-item">
                 <a class="catalog-pagination-link" href="#">2</a>
@@ -280,31 +279,36 @@
 
       <footer class="main-footer">
         <ul class="social-media-list">
-          <li class="social-media-item media-vk">
-            <span class="visually-hidden">вконтакте</span>
-            <a class="social-media-link" href="#">
-              <img class="social-media-img" src="images/social-links/vk.svg" width="25" height="15" alt="лого vk">
+          <li class="social-media-item">
+            <span class="visually-hidden">вконтакте.</span>
+            <a class="social-media-link media-vk" href="https://vk.com/htmlacademy">
+              <svg class="social-media-svg" focusable="false" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="25" height="15" fill="none" viewBox="0 0 25 15">
+                <path fill="#83B3D3" fill-rule="evenodd" d="M24.12 1.8c.16-.54 0-.94-.8-.94H20.7c-.67 0-.98.34-1.15.73 0 0-1.33 3.2-3.22 5.27-.61.6-.9.8-1.23.8-.16 0-.41-.2-.41-.75v-5.1c0-.66-.19-.95-.74-.95H9.82c-.42 0-.67.3-.67.59 0 .62.95.76 1.04 2.51v3.8c0 .83-.15.98-.48.98-.9 0-3.06-3.2-4.34-6.88-.25-.72-.5-1-1.18-1H1.57c-.75 0-.9.34-.9.73 0 .68.89 4.07 4.14 8.55 2.17 3.06 5.23 4.72 8 4.72 1.68 0 1.88-.37 1.88-1v-2.32c0-.74.16-.88.7-.88.38 0 1.05.19 2.6 1.66 1.79 1.75 2.08 2.54 3.08 2.54h2.63c.75 0 1.12-.37.9-1.1-.23-.72-1.08-1.77-2.2-3.02-.62-.71-1.54-1.48-1.82-1.86-.39-.5-.28-.71 0-1.15 0 0 3.2-4.42 3.54-5.93Z" clip-rule="evenodd"/>
+              </svg>
             </a>
           </li>
-          <li class="social-media-item media-telegram">
-            <span class="visually-hidden">телеграм</span>
-            <a class="social-media-link" href="#">
-              <img class="social-media-img" src="images/social-links/telegram.svg" width="18" height="16"
-                alt="лого telegram">
+          <li class="social-media-item">
+            <span class="visually-hidden">телеграм.</span>
+            <a class="social-media-link media-telegram" href="https://t.me/htmlacademy ">
+              <svg class="social-media-svg" focusable="false" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="18" height="16" fill="none" viewBox="0 0 18 16">
+                <path fill="#83B3D3" d="M16.79.1.84 6.25c-1.09.43-1.08 1.04-.2 1.31l4.1 1.28 9.47-5.98c.44-.27.85-.12.52.18L7.05 9.96l-.28 4.22c.41 0 .6-.19.83-.41l1.99-1.93 4.13 3.05c.77.42 1.31.2 1.5-.7l2.72-12.8c.28-1.12-.43-1.62-1.16-1.3Z"/>
+              </svg>
             </a>
           </li>
-          <li class="social-media-item media-youtube">
-            <span class="visually-hidden">youtube</span>
-            <a class="social-media-link" href="#">
-              <img class="social-media-img" src="images/social-links/youtube.svg" width="23" height="18"
-                alt="лого youtube">
+          <li class="social-media-item">
+            <span class="visually-hidden">youtube.</span>
+            <a class="social-media-link media-youtube" href="https://www.youtube.com/user/htmlacademyru">
+              <svg class="social-media-svg" focusable="false" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="22" height="17" fill="none" viewBox="0 0 22 17">
+                <path fill="#83B3D3" d="M18.6 0H3.18C1.31 0 0 1.6 0 3.4v10.1C0 15.4 1.31 17 3.17 17h15.66c1.64 0 3.17-1.6 3.17-3.4V3.4C21.78 1.6 20.47 0 18.6 0ZM7.67 12.54V4.46L15 8.5l-7.33 4.04Z"/>
+              </svg>
             </a>
           </li>
         </ul>
         <a class="footer-contact-tel" href="tel:+78128121212">+7 (812) 812-12-12</a>
-        <a class="footer-contact-link" href="#">
-          <img class="footer-contact-link-img" src="images/logo-HTML-Academy.svg" width="115" height="34"
-            alt="лого HTMLAcademy">
+        <a class="footer-contact-link" href="https://htmlacademy.ru/">
+          <svg class="footer-contact-link-svg" focusable="false" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="115" height="34" fill="none" viewBox="0 0 115 34">
+            <path fill="#000" d="M0 13.26v2.6h2.5v-2.6H0ZM11.6 4.86c-1.6 0-2.8.7-3.6 1.7h-.1V.36h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6.1c.1-3-1.8-4.9-4.5-4.9ZM26.6 5.16h-4.8v-3.7h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1v-5.7h4.8v-2ZM41.1 4.96c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1v-1.6H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13.06c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.36h-2v12.7ZM28.9 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22.36c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.16c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2v-15.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.26c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 18.26c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27.36l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z"/>
+          </svg>
         </a>
       </footer>
     </div>
